--- a/tests/BlackFox.Stidgen.Tests/BlackFox.Stidgen.Tests.fsproj
+++ b/tests/BlackFox.Stidgen.Tests/BlackFox.Stidgen.Tests.fsproj
@@ -14,7 +14,7 @@
     <TargetFrameworkProfile />
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <SolutionDir Condition=" '$(SolutionDir)' == '' ">..\..</SolutionDir>
-    <BaseIntermediateOutputPath>$(SolutionDir)\artifacts\obj\$(MSBuildProjectName)</BaseIntermediateOutputPath>
+    <BaseIntermediateOutputPath>$(SolutionDir)\artifacts\obj\$(MSBuildProjectName)\</BaseIntermediateOutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
